# axon

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
87/9f6681a3d9/: metadata.json
benchmarks/: README.md  codeforces_hard_like.json  hallucination_guardrails.json  hf_arc_challenge_100.json  hf_boolq_100.json  hf_commonsenseqa_100.json  hf_gsm8k_100.json  hf_hellaswag_100.json  hf_mbpp_calls_100.json  hf_mmlu_100.json  hf_truthfulqa_mc1_100.json  hf_winogrande_100.json  information_dense_ledger.json  long_context_books_distractor.json  long_context_sniah_xl.json  mode_profile_targeted.json  models_pareto.txt  models_pareto_live.txt  models_synthetic_fast_mix.txt  models_synthetic_mix.txt  rlm_challenges.json  rlm_hard_coding_planning.json
benchmarks/analysis/: benchmark_results_flat.csv  failure-taxonomy-baseline.csv  failure-taxonomy-baseline.md  failure-taxonomy-promptfix-v2.csv  failure-taxonomy-promptfix-v2.md  failure-taxonomy-promptfix-v3-targeted.csv  failure-taxonomy-promptfix-v3-targeted.md  failure-taxonomy-promptfix.csv  failure-taxonomy-promptfix.md  results-rlm_hard_coding_planning-promptfix-v2.json  results-rlm_hard_coding_planning-promptfix-v3-targeted.json  results-rlm_hard_coding_planning-promptfix.json  summary-rlm_hard_coding_planning-promptfix-v2.md  summary-rlm_hard_coding_planning-promptfix-v3-targeted.md  summary-rlm_hard_coding_planning-promptfix.md
benchmarks/hf-runs-skate-lenient-20260225-092203/: overall-summary.md  results-hf_arc_challenge_100.json  results-hf_boolq_100.json  results-hf_gsm8k_100.json  results-hf_hellaswag_100.json  results-hf_mbpp_calls_100.json  summary-hf_arc_challenge_100.md  summary-hf_boolq_100.md  summary-hf_gsm8k_100.md  summary-hf_hellaswag_100.md  summary-hf_mbpp_calls_100.md
benchmarks/hf-runs-skate-quick-20260225-085400/: overall-summary.md  results-hf_arc_challenge_100.json  results-hf_boolq_100.json  results-hf_gsm8k_100.json  results-hf_hellaswag_100.json  summary-hf_boolq_100.md  (+5 more)
config/: prompt_policies.json
docs/: benchmarking.md  expanded-benchmark-findings-2026-02-24.md  fork-checkpoint-vfs.md  gemini-mode-profile-review-2026-02-25.md  gemini-peer-review-2026-02-24.md  rlm-paper-comparison.md  testing-playbook.md
notebooks/: benchmark_legacy_mode_mappings_archive.py  benchmark_results_analysis.py  benchmark_run_workflow.py  plancraft_altum_benchmark.py  plancraft_axon_benchmark.py
paper/: README.md  bayesian_snippets.tex  main.tex  refs.bib
scripts/: adapt_hf_arc_mcq.py  adapt_hf_book_distractor.py  adapt_hf_boolq.py  adapt_hf_commonsenseqa.py  adapt_hf_gsm8k.py  adapt_hf_hellaswag.py  adapt_hf_mbpp_calls.py  adapt_hf_mmlu.py  adapt_hf_truthfulqa.py  adapt_hf_winogrande.py  analyze_bayesian.py  benchmark_altum.py  benchmark_axon.py  failure_taxonomy.py  optimize_prompt_policy.py  plot_benchmark_findings.py  run_hf_benchmarks.sh  run_overall_tests.sh
src/: export.rs  lib.rs  llm.rs  main.rs  mcp.rs  openai.rs  policy.rs  prompts.rs  rlm.rs  sandbox.rs  service.rs  store.rs  tools.rs  trajectory.rs  vfs.rs
tests/: integration.rs  trajectory_export.rs
website/: .sprite  changelog.html  den.dhall  index.html  mise.toml
(+206 files in other folders)
