[package]
name = "axon"
version = "0.1.0"
edition = "2021"

[dependencies]
ouros = { git = "https://github.com/parcadei/ouros" }
genai = "0.5"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
anyhow = "1"
arc-swap = "1.7"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
rmcp = { version = "=1.4.0", features = ["schemars", "server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
