[package]
name = "altum"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"

[features]
default = []
# Steel runtime experiment (mattwparas/steel). Off by default to keep the
# default build hermetic and fast; enable with `--features steel`.
steel = ["dep:steel-core"]
# S3 / R2 / MinIO VFS backend (rust-s3 crate). Off by default.
s3 = ["dep:rust-s3"]

[dependencies]
ouros = { git = "https://github.com/parcadei/ouros" }
genai = "0.5"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
anyhow = "1"
arc-swap = "1.7"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "=1.4.0", features = ["schemars", "server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
# Content-addressable blob hashing for S3Vfs (always available - tiny dep).
sha2 = "0.10"
# Async utilities for VFS backend trait objects.
async-trait = "0.1"
hex = "0.4"

# Optional: Steel runtime experiment.
steel-core = { version = "0.8", optional = true }

# Optional: S3-compatible remote VFS via rust-s3.
# When the feature is off this crate is not added to the lock file, which
# avoids pulling in aws-lc-sys or other heavy native deps by default.
rust-s3 = { version = "0.35", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
